{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 135,
  "lineage": "b5bd0cf8-04cf-b968-4adf-14acbd78e965",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-0deb645f012b6735e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0deb645f012b6735e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7a41664c6f410f9",
            "private_dns": "ip-192-168-0-108.ap-south-1.compute.internal",
            "private_ip": "192.168.0.108",
            "public_ip": "3.110.210.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a6d1119075b7b8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b88197d564db4bde",
            "tags": {
              "Name": "Web-server-1"
            },
            "tags_all": {
              "Name": "Web-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0570d7682aa3aead9"
            ]
          },
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.primary-vpc",
            "aws_key_pair.key2",
            "aws_security_group.Web-SG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:internet-gateway/igw-059fea6a333324832",
            "id": "igw-059fea6a333324832",
            "owner_id": "592161164847",
            "tags": {
              "Name": "igw-1"
            },
            "tags_all": {
              "Name": "igw-1"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:route-table/rtb-043b8972b2fb66609",
            "id": "rtb-043b8972b2fb66609",
            "owner_id": "592161164847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:route-table/rtb-0cea58fea7021fe04",
            "id": "rtb-0cea58fea7021fe04",
            "owner_id": "592161164847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059fea6a333324832",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-1",
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-1_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d81a7f282feeff5",
            "route_table_id": "rtb-043b8972b2fb66609",
            "subnet_id": "subnet-0f542ec2cec35619f"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnets",
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-2_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b02a60709f628f",
            "route_table_id": "rtb-043b8972b2fb66609",
            "subnet_id": "subnet-02e3848df8e1c8065"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnets",
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-1_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f7e095aaa82ad8e",
            "route_table_id": "rtb-0cea58fea7021fe04",
            "subnet_id": "subnet-0b88197d564db4bde"
          },
          "dependencies": [
            "aws_internet_gateway.igw-1",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-2_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ae31747354183d",
            "route_table_id": "rtb-0cea58fea7021fe04",
            "subnet_id": "subnet-01eb243121f68f4da"
          },
          "dependencies": [
            "aws_internet_gateway.igw-1",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-09ebf0dddaf34cdda",
            "description": "Allow connections only from ec2 instances in our vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ebf0dddaf34cdda",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow connections only from ec2 instances in our vpc",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-SG"
            },
            "tags_all": {
              "Name": "DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-0570d7682aa3aead9",
            "description": "Allow SSH, HTTP \u0026 HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0570d7682aa3aead9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALlow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0b88197d564db4bde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0b88197d564db4bde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "WEB-1"
            },
            "tags_all": {
              "Name": "WEB-1"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-01eb243121f68f4da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-01eb243121f68f4da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "WEB-2"
            },
            "tags_all": {
              "Name": "WEB-2"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0460360c06c415f7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0460360c06c415f7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "APP-1"
            },
            "tags_all": {
              "Name": "APP-1"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-05bd1a3fb3f00b3d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-05bd1a3fb3f00b3d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "APP-2"
            },
            "tags_all": {
              "Name": "APP-2"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0f542ec2cec35619f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0f542ec2cec35619f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "DB-1"
            },
            "tags_all": {
              "Name": "DB-1"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-02e3848df8e1c8065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-02e3848df8e1c8065",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "DB-2"
            },
            "tags_all": {
              "Name": "DB-2"
            },
            "vpc_id": "vpc-0b268b1ea8c402de7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:vpc/vpc-0b268b1ea8c402de7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0efa2cde22d543627",
            "default_route_table_id": "rtb-01fb2235ba15fc2c2",
            "default_security_group_id": "sg-006cb605a91755053",
            "dhcp_options_id": "dopt-08e25d63",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b268b1ea8c402de7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01fb2235ba15fc2c2",
            "owner_id": "592161164847",
            "tags": {
              "Name": "primary-1"
            },
            "tags_all": {
              "Name": "primary-1"
            }
          }
        }
      ]
    }
  ]
}